<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_margin"
    tools:context=".activity.MainActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_start_service"
        android:id="@+id/btn_start_service"
        android:enabled="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_stop_service"
        android:id="@+id/btn_stop_service"
        android:enabled="false"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_settings"
        android:id="@+id/btn_settings"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/btn_start_service"
        android:baselineAligned="false">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/label_statistics"
                android:layout_column="0"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_service_state"
                android:layout_column="0" />

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text=""
                android:id="@+id/txt_service_state"
                android:layout_column="1"
                android:layout_marginLeft="@dimen/activity_margin"
                android:layout_marginStart="@dimen/activity_margin" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_service_uptime"
                android:layout_column="0" />

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/txt_service_uptime"
                android:layout_column="1"
                android:layout_marginLeft="@dimen/activity_margin"
                android:layout_marginStart="@dimen/activity_margin" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_message_received"
                android:layout_column="0" />

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/txt_message_received"
                android:layout_column="1"
                android:layout_marginLeft="@dimen/activity_margin"
                android:layout_marginStart="@dimen/activity_margin" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_sms_sent"
                android:layout_column="0" />

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/txt_sms_sent"
                android:layout_column="1"
                android:layout_marginLeft="@dimen/activity_margin"
                android:layout_marginStart="@dimen/activity_margin" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_mail_sent"
                android:layout_column="0" />

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/txt_mail_sent"
                android:layout_column="1"
                android:layout_marginLeft="@dimen/activity_margin"
                android:layout_marginStart="@dimen/activity_margin" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/label_total_statistics"
                android:layout_column="0"
                android:layout_marginTop="@dimen/activity_margin" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_service_uptime"
                android:layout_column="0" />

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/txt_total_uptime"
                android:layout_column="1"
                android:layout_marginLeft="@dimen/activity_margin"
                android:layout_marginStart="@dimen/activity_margin" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_message_received"
                android:layout_column="0" />

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/txt_total_message_received"
                android:layout_column="1"
                android:layout_marginLeft="@dimen/activity_margin"
                android:layout_marginStart="@dimen/activity_margin" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_sms_sent"
                android:layout_column="0" />

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/txt_total_sms_sent"
                android:layout_column="1"
                android:layout_marginLeft="@dimen/activity_margin"
                android:layout_marginStart="@dimen/activity_margin" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/label_mail_sent"
                android:layout_column="0" />

            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/txt_total_mail_sent"
                android:layout_column="1"
                android:layout_marginLeft="@dimen/activity_margin"
                android:layout_marginStart="@dimen/activity_margin" />
        </TableRow>

    </TableLayout>

</RelativeLayout>
